--- a/src/components/TablePage.module.css
+++ b/src/components/TablePage.module.css
@@ -1,3 +1,17 @@
+.rowOpened {
+  border-bottom: 1px solid #9e9e9e;
+  border-left: 1px solid #9e9e9e;
+  padding: 0.5em;
+  transition: border-bottom 0s 0s, border-left 0s 0s, padding 0s 0s;
+}
+
+.rowHidden {
+  border-left: 0px solid #9e9e9e;
+  border-bottom: 0px solid #9e9e9e;
+  padding: 0;
+  transition: border-bottom-width 0s 0.5s, border-left-width 0s 0.5s, padding 0.05s linear 0.45s;
+}
+
 .row {
   overflow: hidden;
 }
@@ -12,19 +26,10 @@
   transition: max-height 0.5s ease-in;
 }
 
-.visible {
-  visibility: visible;
-}
-
-.collapse {
-  visibility: collapse;
-  transition: visibility 0s 0.5s;
-}
-
 .buttonCell {
   aspect-ratio: 1;
   background-color: #3489ca;
-  border: none;
+  border-left: 1px solid #9e9e9e;
   color: white;
   cursor: pointer;
   height: 2em;
