--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
   font-family: sans-serif;
   margin: 0;
+  overflow-y: scroll;
   padding: 0;
 }
 
@@ -52,17 +53,12 @@ a {
   text-decoration: inherit;
 }
 
-table,
-th,
-td {
-  border: 1px solid #9e9e9e;
-}
-
 table {
   border-collapse: collapse;
 }
 
 th {
+  border: 1px solid #9e9e9e;
   color: #434343;
   font-size: 1em;
   font-weight: 600;
@@ -72,6 +68,8 @@ th {
 }
 
 td {
+  border-bottom: 1px solid #9e9e9e;
+  border-right: 1px solid #9e9e9e;
   color: #434343;
   font-size: 1em;
   padding: 0.5em;
